--- a/preamble.sty
+++ b/preamble.sty
@@ -149,8 +149,11 @@
 \newcommand{\dblflags}{{\flags\!\times\!\flags}}
 \newcommand{\triflags}{{\flags\!\times\!\flags\!\times\!\flags}}
 
-% quantum integers
+% q-integers
 \newcommand{\qint}[1]{[[#1]]}
+
+% q-factorials
+\newcommand{\qfact}[1]{[[#1]]_!}
 
 % compositions (of r into n parts)
 \newcommand{\compositions}[1][]{\Lambda_0{#1}}
