--- a/report.tex
+++ b/report.tex
@@ -1114,10 +1114,6 @@ Observe that $\integers[q]$ is a subring of $\qfrac$, which makes $\qfrac$ into 
 {\color{red}COMPLETE THIS PROOF}
 \end{proof}
 
-\begin{lemma}\label{lemma:leading-term-q}
-{\color{red}LEADING TERM OF A PRODUCT OF GENERATORS.}
-\end{lemma}
-
 \begin{proposition}\label{proposition:q-schur-presentation}
 If $r<n$, the map
 \begin{equation*}
@@ -1159,6 +1155,8 @@ for some polynomials $g_B\in\integers[q]$.
 Thus the coefficient of $e_A$ in the above expression is a product of $q$-integers, so is invertible in $\qfrac$.
 
 {\color{red}COMPLETE THIS PROOF:
+Need to explain why all other terms are strictly smaller with respect to the numerical order.
+
 The final step of the proof to be completed is an induction argument, that those $B:B<A$ are also the leading term in the expression for an image of a path.}
 \end{proof}
 
