some minor edits

--- a/preamble.sty
+++ b/preamble.sty
@@ -225,4 +225,4 @@
 % -------------------------------------------- %
 
 \author{Tom Crawley}
-\title{A geometric realisation of affine 0-Schur algebras.}
+\title{Affine 0-Schur algebras and affine double flag varieties.}
