--- a/report.tex
+++ b/report.tex
@@ -15,7 +15,7 @@
 
 \section{Affine q-Schur algebras via Hecke algebras}
 
-Describe the original construction/ definition of affine q-Schur algebras via Hecke endomorphism algebras.
+{\color{red}Describe the original construction/ definition of affine q-Schur algebras via Hecke endomorphism algebras.}
 
 \section{The cyclic flags realisation of affine q-Schur algebras}
 
@@ -534,7 +534,7 @@ It is clear that $\le$ is reflexive and transitive.
 Suppose $A,B\in\matrices$ with $A\le B$ and $B\le A$. Then $d_{i,j}{(A)} = d_{i,j}{(B)}$ for each $i,j\in\integers$ with $i\le j$, which shows $a_{s,t}=b_{s,t}$ whenever $s<t$, as a result of Lemma \ref{lemma:antisymmetry}. Similarly, $\bar{d}_{i,j}{(A)} = \bar{d}_{i,j}{(B)}$ for each $i,j\in\integers$ with $i\geq j$, so $a_{s,t}=b_{s,t}$ whenever $s>t$. Moreover, $a_{i,i}=b_{i,i}$ for each $i\in\integers$, since $\co{A}=\co{B}$. Thus $A=B$, which shows $\le$ is antisymmetric and therefore $\le$ is a partial order on $\matrices$.
 \end{proof}
 
-This partial order is sometimes called the hook order.{\color{red}(*) Is it 'Hook' or 'hook'?} The following lemma will be invoked later in induction arguments.
+This partial order is sometimes called the hook order. The following lemma will be invoked later in induction arguments.
 
 \begin{lemma}\label{lemma:finite-descent-hook-order}
 For any $A\in\matrices$, the set $\{B\in\matrices:B\le A\}$ is finite.
